--- a/src/main/resources/templates/pets/createOrUpdateVisitForm.html
+++ b/src/main/resources/templates/pets/createOrUpdateVisitForm.html
@@ -8,14 +8,14 @@
     Visit
   </h2>
 
-  <b>Pet</b>
+  <b>Pacient</b>
   <table class="table table-striped">
     <thead>
       <tr>
         <th>Name</th>
         <th>Birth Date</th>
-        <th>Type</th>
-        <th>Owner</th>
+        <th>Gender</th>
+        <th>Doctor</th>
       </tr>
     </thead>
     <tr>
@@ -52,7 +52,7 @@
       <th>Description</th>
     </tr>
     <tr th:if="${!visit['new']}" th:each="visit : ${pet.visits}">
-      <td th:text="${#temporals.format(visit.date, 'yyyy-MM-dd')}" /></td>
+      <td th:text="${#temporals.format(visit.date, 'yyyy-MM-dd HH:mm')}" /></td>
       <td th:text=" ${visit.description}" /></td>
     </tr>
   </table>
