--- a/src/main/less/header.less
+++ b/src/main/less/header.less
@@ -12,21 +12,12 @@
   margin: 12px 0 6px;
   width: 229px;
   height: 46px;
-  display: inline-block;
+  display: none;
   text-decoration: none;
   padding: 0;
 }
 
-.navbar a.navbar-brand span {
-  display: block;
-  width: 229px;
-  height: 46px;
-  background: url("../images/spring-logo-dataflow.png") -1px -48px no-repeat;
-  opacity: 0;
-  -moz-transition: opacity 0.12s ease-in-out;
-  -webkit-transition: opacity 0.12s ease-in-out;
-  -o-transition: opacity 0.12s ease-in-out;
-}
+
 
 .navbar a:hover.navbar-brand span {
   opacity: 1;
