--- a/src/main/resources/templates/owners/ownerList.html
+++ b/src/main/resources/templates/owners/ownerList.html
@@ -4,27 +4,27 @@
 
   <body>
 
-    <h2>Owners</h2>
+    <h2>Doctors</h2>
 
     <table id="owners" class="table table-striped">
         <thead>
         <tr>
             <th style="width: 150px;">Name</th>
-            <th style="width: 200px;">Address</th>
+            <th style="width: 200px;">Specializimi</th>
             <th>City</th>
             <th style="width: 120px">Telephone</th>
-            <th>Pets</th>
+            <th>Pacients</th>
         </tr>
         </thead>
         <tbody>
           <tr th:each="owner : ${selections}">
               <td>
-                  <a th:href="@{/owners/__${owner.id}__}" th:text="${owner.firstName + ' ' + owner.lastName}"/></a>
+                  <a th:href="@{/owners/__${owner.id}__}" th:text="${owner.firstName + ' ' + owner.lastName + ' '}"/></a>
               </td>
               <td th:text="${owner.address}"/>
               <td th:text="${owner.city}"/>
               <td th:text="${owner.telephone}"/>
-              <td><span th:each="pet : ${owner.pets}" th:text="${pet.name} "/></td>
+              <td><span th:each="pet : ${owner.pets}" th:text="${pet.name}+'-' "/></td>
           </tr>
         </tbody>
     </table>
