--- a/src/main/resources/templates/pets/createOrUpdatePetForm.html
+++ b/src/main/resources/templates/pets/createOrUpdatePetForm.html
@@ -11,7 +11,7 @@
     <input type="hidden" name="id" th:value="*{id}" />
     <div class="form-group has-feedback">
       <div class="form-group">
-        <label class="col-sm-2 control-label">Owner</label>
+        <label class="col-sm-2 control-label">Doctor</label>
         <div class="col-sm-10">
           <span th:text="${pet.owner?.firstName + ' ' + pet.owner?.lastName}" />
         </div>
@@ -19,16 +19,16 @@
       <input
         th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}" />
       <input
-        th:replace="~{fragments/inputField :: input ('Birth Date', 'birthDate', 'date')}" />
+        th:replace="~{fragments/inputField1 :: input ('Birth Date', 'birthDate', 'date')}" />
       <input
-        th:replace="~{fragments/selectField :: select ('Type', 'type', ${types})}" />
+        th:replace="~{fragments/selectField :: select ('Gender', 'type', ${types})}" />
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button
           th:with="text=${pet['new']} ? 'Add Pet' : 'Update Pet'"
           class="btn btn-default" type="submit" th:text="${text}">Add
-          Pet</button>
+          Pacient</button>
       </div>
     </div>
   </form>
