--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -48,7 +48,7 @@
                       <span>Home</span>
                   </li>
   
-                  <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find doctors  ')">
+                  <li th:replace="::menuItem ('/doctors/find','doctors','find doctors','search','Find doctors  ')">
                       <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                       <span>Find Doctors</span>
                   </li>
