--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -7,7 +7,7 @@
     <h2 style="font-size: 50px" th:text="#{welcome}">WELCOME TO OUR MEDICAL CLINIC</h2>
     <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
+          <img class="img-responsive" src="../static/resources/images/patients.png" th:src="@{/resources/images/patients.png}"/>
         </div>
     </div>
 
