--- a/src/main/resources/templates/doctors/findDoctors.html
+++ b/src/main/resources/templates/doctors/findDoctors.html
@@ -1,12 +1,12 @@
 <html xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
+  th:replace="~{fragments/layout :: layout (~{::body},'doctors')}">
 
 <body>
 
   <h2>Find Doctors</h2>
 
-  <form th:object="${owner}" th:action="@{/owners}" method="get"
-    class="form-horizontal" id="search-owner-form">
+  <form th:object="${doctor}" th:action="@{/doctors}" method="get"
+    class="form-horizontal" id="search-doctor-form">
     <div class="form-group">
       <div class="control-group" id="lastNameGroup">
         <label class="col-sm-2 control-label">Last name </label>
@@ -29,7 +29,7 @@
   </form>
 
   <br />
-  <a class="btn btn-default" th:href="@{/owners/new}">Add Doctor</a>
+  <a class="btn btn-default" th:href="@{/doctors/new}">Add Doctor</a>
 
 </body>
 </html>
