--- a/src/main/resources/templates/patients/createOrUpdateVisitForm.html
+++ b/src/main/resources/templates/patients/createOrUpdateVisitForm.html
@@ -1,5 +1,5 @@
 <html xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
+  th:replace="~{fragments/layout :: layout (~{::body},'doctors')}">
 
 <body>
 
@@ -19,12 +19,12 @@
       </tr>
     </thead>
     <tr>
-      <td th:text="${pet.name}" /></td>
+      <td th:text="${patient.name}" /></td>
       <td
-        th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}" /></td>
-      <td th:text="${pet.type}" /></td>
+        th:text="${#temporals.format(patient.birthDate, 'yyyy-MM-dd')}" /></td>
+      <td th:text="${patient.type}" /></td>
       <td
-        th:text="${pet.owner?.firstName + ' ' + pet.owner?.lastName}" /></td>
+        th:text="${patient.doctor?.firstName + ' ' + patient.doctor?.lastName}" /></td>
     </tr>
   </table>
 
@@ -38,7 +38,7 @@
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <input type="hidden" name="petId" th:value="${pet.id}" />
+        <input type="hidden" name="patientId" th:value="${patient.id}" />
         <button class="btn btn-default" type="submit">Add Visit</button>
       </div>
     </div>
@@ -51,7 +51,7 @@
       <th>Date</th>
       <th>Description</th>
     </tr>
-    <tr th:if="${!visit['new']}" th:each="visit : ${pet.visits}">
+    <tr th:if="${!visit['new']}" th:each="visit : ${patient.visits}">
       <td th:text="${#temporals.format(visit.date, 'yyyy-MM-dd HH:mm')}" /></td>
       <td th:text=" ${visit.description}" /></td>
     </tr>
