--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html th:fragment="layout (template, menu)" xmlns:th="http://www.springframework.org/schema/data/jaxb">
+<html th:fragment="layout (template, menu)" xmlns:th="http://www.springframework.org/schema/data/jaxb" lang="en/US">
 
-  <head>
+<head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta charset="utf-8">
@@ -17,67 +17,70 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" th:href="@{/resources/css/petclinic.css}"/>
+    <link rel="stylesheet" th:href="@{/resources/css/medicalclinic.css}"/>
 
-  </head>
+</head>
 <body>
 
-  <nav class="navbar navbar-default" role="navigation">
-      <div class="container">
-          <div class="navbar-header">
-              <a class="navbar-brand" th:href="@{/}"><span></span></a>
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
-                  <span class="sr-only"><os-p>Toggle navigation</os-p></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-              </button>
-          </div>
-          <div class="navbar-collapse collapse" id="main-navbar">
-              <ul class="nav navbar-nav navbar-right">
-  
-                  <li th:fragment="menuItem (path,active,title,glyph,text)" class="active" th:class="${active==menu ? 'active' : ''}">
-                      <a th:href="@{__${path}__}" th:title="${title}">
-                        <span th:class="'glyphicon  glyphicon-'+${glyph}" class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                        <span th:text="${text}">Template</span>
-                      </a>
-                  </li>
-  
-                  <li th:replace="::menuItem ('/','home','home page','home','Home')">
-                      <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                      <span>Home</span>
-                  </li>
-  
-                  <li th:replace="::menuItem ('/doctors/find','doctors','find doctors','search','Find doctors  ')">
-                      <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                      <span>Find Doctors</span>
-                  </li>
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" th:href="@{/}"><span></span></a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
+                <span class="sr-only"><os-p>Toggle navigation</os-p></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse" id="main-navbar">
+            <ul class="nav navbar-nav navbar-right">
 
-  
-              </ul>
-          </div>
-      </div>
-  </nav>
-  <div class="container-fluid">
-      <div class="container xd-container">
-  
-          <th:block th:include="${template}"/>
+                <li th:fragment="menuItem (path,active,title,glyph,text)" class="active"
+                    th:class="${active==menu ? 'active' : ''}">
+                    <a th:href="@{__${path}__}" th:title="${title}">
+                        <span th:class="'glyphicon  glyphicon-'+${glyph}" class="glyphicon glyphicon-home"
+                              aria-hidden="true"></span>
+                        <span th:text="${text}">Template</span>
+                    </a>
+                </li>
+
+                <li th:replace="::menuItem ('/','home','home page','home','Home')">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                    <span>Home</span>
+                </li>
+
+                <li th:replace="::menuItem ('/doctors/find','doctors','find doctors','search','Find doctors  ')">
+                    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                    <span>Find Doctors</span>
+                </li>
+
+
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="container xd-container">
+
+        <th:block th:include="${template}"/>
 
         <br/>
         <br/>
         <div class="container">
-          <div class="row">
-            <div class="col-12 text-center">
-              <img src="../static/resources/images/spring-pivotal-logo.png" th:src="@{/resources/images/spring-pivotal-logo.png}"
-                alt="Sponsored by Pivotal"/></div>
-          </div>
+            <div class="row">
+                <div class="col-12 text-center">
+                    <img src="../static/resources/images/medical-clinic.jpg"
+                         th:src="@{/resources/images/medical-clinic.png}"
+                         alt="Medical Clinic"/></div>
+            </div>
         </div>
-      </div>
-  </div>
+    </div>
+</div>
 
-  <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-  <script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
-  <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
 </body>
 
