--- a/src/main/resources/templates/patients/createOrUpdatePatientForm.html
+++ b/src/main/resources/templates/patients/createOrUpdatePatientForm.html
@@ -26,7 +26,7 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button
-          th:with="text=${patient['new']} ? 'Add Pet' : 'Update Pet'"
+          th:with="text=${patient['new']} ? 'Add Patient' : 'Update Patient'"
           class="btn btn-default" type="submit" th:text="${text}">Add
           Pacient</button>
       </div>
